Connect over ftp in passive mode

--- a/app/config/resources/flysystem.yml
+++ b/app/config/resources/flysystem.yml
@@ -7,7 +7,7 @@ oneup_flysystem:
                 username: "%ftp_username%"
                 password: "%ftp_password%"
                 root: "%ftp_root%"
-                passive: ~
+                passive: true
     filesystems:
         cdn:
             adapter: cdn
