notifications module (standalone, only in chat for now)

--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "backbone-nested-model": "~2.0.1",
     "raphael": "~2.1.2",
     "morrisjs": "~0.5.1",
-    "backbone-validation": "~0.9.1"
+    "backbone-validation": "~0.9.1",
+    "backbone.localStorage": "~1.1.16"
   }
 }
