--- a/bower.json
+++ b/bower.json
@@ -44,5 +44,8 @@
     "scribe-plugin-smart-lists": "~0.1.7",
     "scribe-plugin-heading-command": "~0.1.0",
     "interact": "~1.2.2"
+  },
+  "resolutions": {
+    "moment": "~2.9.0"
   }
 }
