--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "bootstrap": "~3.3.1",
     "jquery-sortable": "~0.9.12",
     "modernizr": "~2.8.3",
-    "moment": "~2.8.3",
+    "moment": "~2.9.0",
     "requirejs": "~2.1.15",
     "screenfull": "~1.2.1",
     "flot": "~0.8.3",
@@ -38,6 +38,11 @@
     "backbone-nested-model": "~2.0.1",
     "raphael": "~2.1.2",
     "morrisjs": "~0.5.1",
+    "backbone-validation": "~0.9.1",
+    "web-socket-js": "~1.0.2"
     "backbone-validation": "~0.9.1"
+  },
+  "resolutions": {
+    "moment": "~2.9.0"
   }
 }
