--- a/bower.json
+++ b/bower.json
@@ -1,46 +1,17 @@
 {
-  "name": "lily",
-  "version": "0.0.0",
-  "homepage": "https://github.com/saio-fr/lily",
+  "name": "query-service",
+  "version": "0.0.1",
   "authors": [
-    "Bruno Paccini <bruno@paccini.com>"
+    "Raphael SIMON <simonrapha6l@gmail.com>"
   ],
+  "description": "NodeJS Service to query knowledge base",
   "license": "MIT",
+  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "web/js/bower_components",
     "test",
     "tests"
-  ],
-  "dependencies": {
-    "almond": "~0.3.0",
-    "backbone": "~1.1.2",
-    "bootstrap-wysihtml5": "*",
-    "jquery-placeholder": "~2.0.8",
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.3.1",
-    "jquery-sortable": "~0.9.12",
-    "modernizr": "~2.8.3",
-    "moment": "~2.9.0",
-    "requirejs": "~2.1.15",
-    "screenfull": "~1.2.1",
-    "flot": "~0.8.3",
-    "bootstrap-daterangepicker": "~1.3.17",
-    "jquery.scrollTo": "~1.4.14",
-    "isMobile": "~0.3.5",
-    "snapjs": "~1.9.3",
-    "fastclick": "~1.0.3",
-    "easypie": "~2.1.6",
-    "flot.tooltip": "~0.8.4",
-    "html5sortable": "*",
-    "backbone-nested-model": "~2.0.1",
-    "raphael": "~2.1.2",
-    "morrisjs": "~0.5.1",
-    "backbone-validation": "~0.9.1"
-  },
-  "resolutions": {
-    "moment": "~2.9.0"
-  }
+  ]
 }
