--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,7 @@
     "scribe-plugin-smart-lists": "~0.1.7",
     "scribe-plugin-heading-command": "~0.1.0",
     "interact": "~1.2.2",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "jquery-autosize": "~3.0.3"
   }
 }
