--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,10 +34,10 @@ security:
         - { path: ^/[^/]+/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/[^/]+/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[^/]+/admin, role: ROLE_SUPER_ADMIN }
-        - { path: ^/[^/]+/lily, role: ROLE_USER }
+        - { path: ^/[^/]+/, role: ROLE_USER }
 
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, role: ROLE_SUPER_ADMIN }
-        - { path: ^/lily, role: ROLE_USER }
+        - { path: ^/, role: ROLE_USER }
