--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+lily_root:
+    pattern: /
+    defaults:
+        _controller: FrameworkBundle:Redirect:urlRedirect
+        path: http://saio.fr
+
 lily_media:
     resource: "@LilyMediaBundle/Resources/config/routing.yml"
     prefix:   /
