--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,6 +13,9 @@ security:
             id: fos_user.user_provider.username_email
 
     firewalls:
+        public:
+            pattern:  ^/(_(profiler|wdt)|app|css|images|js)/
+            security: false
         main:
             pattern: ^/
             form_login:
@@ -23,7 +26,7 @@ security:
                 always_use_default_target_path: false
                 success_handler: RedirectAfterLogin
                 target_path_parameter:          _target_path
-                use_referer:                    false              
+                use_referer:                    false       
             logout:
                 path: fos_user_security_logout
                 target: home_index
@@ -36,6 +39,7 @@ security:
         - { path: ^/[^/]+/admin, role: ROLE_SUPER_ADMIN }
         - { path: ^/[^/]+/, role: ROLE_USER }
 
+        - { path: ^/app, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
