--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,11 @@ indent_size = 2
 charset = utf-8
 
 # 2 space indentation
+[*.css]
+indent_style = space
+indent_size = 2
+
+# 2 space indentation
 [*.json]
 indent_style = space
 indent_size = 2
