--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-cli": "*",
     "grunt-concurrent": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-concat": "*",
     "grunt-contrib-cssmin": "*",
     "grunt-contrib-imagemin": "*",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-requirejs": "*",
     "grunt-contrib-uglify": "*",
+    "grunt-hashres": "^0.4.1",
     "grunt-newer": "*",
     "inherits": "^2.0.1",
     "load-grunt-config": "*",
