--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "symfony/var-dumper": "~2.6",
     "league/flysystem-sftp": "~1.0",
     "guzzlehttp/guzzle": "~5.0",
-    "guzzlehttp/guzzle-services": "0.5.*"
+    "guzzlehttp/guzzle-services": "0.5.*",
+    "segmentio/analytics-php" : "1.2.*"
   },
   "scripts": {
     "post-install-cmd": [
