--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "league/flysystem-sftp": "~1.0",
     "guzzlehttp/guzzle": "~5.0",
     "guzzlehttp/guzzle-services": "0.5.*",
-    "segmentio/analytics-php" : "1.2.*"
+    "segmentio/analytics-php" : "1.2.*",
+    "guzzlehttp/log-subscriber": "~1.0"
   },
   "scripts": {
     "post-install-cmd": [
