--- a/sftp-config.json
+++ b/sftp-config.json
@@ -16,8 +16,8 @@
 
     "host": "178.33.238.71",
     "user": "saio",
-    "password": "qyH26i$8",
-    //"port": "22",
+    // "password": "qyH26i$8",
+    "port": "22",
 
     "remote_path": "/var/www/vhosts/saio.fr/bruno.saio.fr",
     "ignore_regexes": [
@@ -35,7 +35,7 @@
     //"keepalive": 120,
     //"ftp_passive_mode": true,
     //"ftp_obey_passive_host": false,
-    //"ssh_key_file": "~/.ssh/id_rsa",
+    "ssh_key_file": "~/.ssh/id_rsa",
     //"sftp_flags": ["-F", "/path/to/ssh_config"],
 
     //"preserve_modification_times": false,
