--- a/.jshintrc
+++ b/.jshintrc
@@ -28,8 +28,8 @@
   // Enforce tab width of 2 spaces.
   "indent": 2,
 
-  // Prohibit use of a variable before it is defined.
-  "latedef": true,
+  // Prohibit use of a variable before it is defined, except for function declarations
+  "latedef": "nofunc",
 
   // Require capitalized names for constructor functions.
   "newcap": true,
