--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "*",
     "grunt-contrib-clean": "*",
-    "grunt-contrib-concat": "*",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "*",
     "grunt-contrib-cssmin": "*",
     "grunt-contrib-imagemin": "*",
     "grunt-contrib-jshint": "^0.11.2",
@@ -16,6 +17,7 @@
     "grunt-contrib-uglify": "*",
     "grunt-hashres": "^0.4.1",
     "grunt-newer": "*",
+    "grunt-umd": "*",
     "inherits": "^2.0.1",
     "load-grunt-config": "*",
     "lru-cache": "^2.6.4",
