--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^0.22.1",
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "^3.0.3",
+    "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "*",
     "grunt-contrib-clean": "*",
@@ -16,19 +17,37 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-requirejs": "*",
     "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-hashres": "^0.4.1",
+    "grunt-karma": "^0.12.0",
     "grunt-newer": "*",
+    "grunt-replace": "^0.9.3",
     "grunt-umd": "*",
+    "grunt-webpack": "^1.0.11",
     "inherits": "^2.0.1",
+    "karma": "^0.13.3",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-html-reporter": "^0.2.6",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-qunit": "^0.1.5",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-sauce-launcher": "^0.2.14",
+    "karma-sinon": "^1.0.4",
+    "karma-tap": "^1.0.3",
+    "karma-webpack": "^1.7.0",
     "load-grunt-config": "*",
     "lru-cache": "^2.6.4",
-    "sigmund": "^1.0.1"
-  },
-  "dependencies": {
-    "time-grunt": "*"
-  },
-  "scripts": {
-    "build": "grunt build",
-    "dev": "grunt dev"
+    "phantomjs": "^1.9.17",
+    "qunit": "^0.7.6",
+    "qunitjs": "^1.18.0",
+    "sigmund": "^1.0.1",
+    "sinon": "^1.15.4",
+    "tape": "^4.2.0",
+    "time-grunt": "*",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
