added integration test to check the snippet/widget communication

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "eslint": "^0.22.1",
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "^3.0.3",
-    "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "*",
     "grunt-contrib-clean": "*",
@@ -31,23 +30,24 @@
     "karma-html-reporter": "^0.2.6",
     "karma-ie-launcher": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma-qunit": "^0.1.5",
     "karma-requirejs": "^0.2.2",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.14",
     "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.5",
     "karma-tap": "^1.0.3",
     "karma-webpack": "^1.7.0",
     "load-grunt-config": "*",
     "lru-cache": "^2.6.4",
     "phantomjs": "^1.9.17",
-    "qunit": "^0.7.6",
-    "qunitjs": "^1.18.0",
     "sigmund": "^1.0.1",
     "sinon": "^1.15.4",
     "tape": "^4.2.0",
     "time-grunt": "*",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
