--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = true
 
 # 4 space indentation
@@ -20,11 +21,16 @@ indent_size = 2
 charset = utf-8
 
 # 2 space indentation
-[*.css]
+[*.json]
 indent_style = space
 indent_size = 2
 
 # 2 space indentation
-[*.json]
+[*.twig]
+indent_style = space
+indent_size = 2
+
+# 2 space indentation
+[*.css]
 indent_style = space
 indent_size = 2
