--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "normalize.css": "^3.0.3",
     "underscore": "^1.8.3"
   }
 }
