update package.json with required dependancies (used to be in bower but usign npm is cleaner with webpack)

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "backbone": "^1.2.3",
+    "jquery": "^2.1.4",
     "normalize.css": "^3.0.3",
     "underscore": "^1.8.3"
   }
