--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "saio-lily",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/saio-fr/lily.git"
+  },
   "devDependencies": {
     "almond": "^0.3.1",
     "eslint": "^0.22.1",
