--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,7 @@
     "backbone-nested-model": "~2.0.1",
     "raphael": "~2.1.2",
     "morrisjs": "~0.5.1",
-    "backbone-validation": "~0.9.1",
+    "backbone-validation": "*",
     "scribe": "~1.4.15",
     "scribe-plugin-toolbar": "~0.2.0",
     "scribe-plugin-smart-lists": "~0.1.7",
