--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
     "backbone": "^1.2.3",
     "jquery": "^2.1.4",
     "normalize.css": "^3.0.3",
-    "underscore": "^1.8.3",
+    "underscore": "^1.8.3"
   }
 }
